--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+.display{
+  width: 400px;
+  height: 250px;
+  margin-top: 10%;
+  border: 1px solid black;
+  border-radius: 6px;
+}
+.input-div{
+  margin: 20px 0;
+}
+.input-div input{
+  margin: 0 20px;
+  height: 24px;
+  padding: 0 5px;
+}
+.input-div button{
+  height: 24px;
+  padding: 5px;
+}
+span{
+  margin: 0 15px;
+}
+.indicator ul li{
+  list-style: none;
+  padding:  5px 10px;
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+.indicator ul {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  cursor: pointer;
+  }
+.indicator{
+  display: flex;
+  justify-content: center;
+}
+span{
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.answered{
+  background-color: rgb(192, 223, 83);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.finished{
+  display: none;
+}
+.doNotDisplay{
+  display: none;
+}
+.displayResult{
+  display: block;
 }
